--- a/web/styles/sections/brands.scss
+++ b/web/styles/sections/brands.scss
@@ -1,5 +1,6 @@
 .section--brands {
   padding: 60px 120px 60px 50px;
+  height: auto;
 
   .section__content {
     justify-content: center;
